# bpmn-neural-network-prediction

./: README.md  pyproject.toml
maude/: 2-tuple.maude  3-tuple.maude  README.md  bpmn-analysis.maude  bpmn-file.maude  bpmn-prelude.maude  bpmn-sockets-analysis.maude  bpmn-sockets.maude  bpmn.maude  file-handler.maude  maybe.maude  mgDistributions.maude  my-map.maude  my-real-time-maude.maude  sampler.maude  socket-handler.maude  stochastic-expression.maude  supervisor-predictive-ml-usage-2.maude  supervisor-predictive-ml-usage.maude  supervisor-predictive-usage.maude  supervisor-queues.maude  supervisor-usage-queues.maude  supervisor-usage.maude  view-oid.maude
maude-python-interface/: README.txt  main.py  prediction_model.py  test-in.txt  trace.py
maude/examples/delivery/: delivery.maude
maude/examples/recruitment/: recruitment.maude
maude/examples/visa/: visa.maude
maude/interaction/: README.md
maude/interaction/file-socket/: README.md  file-to-socket-server.maude  file-to-socket.maude  socket-client.maude  socket-server.maude  trace.csv
maude/interaction/files/: README.md  bpmn.maude  prediction.csv  predictor.maude  trace.csv
maude/interaction/sandbox/: README.txt  all_results.txt  clean2plot.py  header  (+35 more)
maude/log-guided/: README.md  bpmn-log-guided-analysis.maude  bpmn-log-guided-run.maude  bpmn-log-guided.maude
models/delivery/: data_info.bak
models/recruitment/: data_info.bak
models/visa/: data_info.bak
scripts/: README.md  fix_header.sh  generate_plots.sh  generate_unclean.sh  run_all.sh  unclean2clean.sh
utils/: paths.py  summary.py
(+49 files in other folders)
