[tool.poetry]
name = "bpmn-neural-network-prediction"
version = "0.1.0"
description = ""
authors = ["Nicolás Pozas <Pozas91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.10.0"
pandas = "^1.4.4"
matplotlib = "^3.6.0"
pympler = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
